// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`cli usage snapshots > aai --help 1`] = `
"Voice agent development kit (aai vX.X.X)
USAGE aai <command> [OPTIONS]
LOCAL DEVELOPMENT (THIS MACHINE)
  init       Scaffold a new agent project
  dev        Start a local development server
  console    Talk to the agent through your microphone and speakers
  test       Run the project's tests
  eval       Run agent behaviour evals against a live model
  build      Bundle agent without deploying
STUDIO ROUND-TRIP (SOURCE ↔ THE STUDIO WORKSPACE)
  pull       Pull a studio project into a local directory
  push       Sync this project's source to its studio workspace
  publish    Push to the studio and deploy to production (the studio's Publish button)
  delete     Delete the studio project and its deployed agents
  list       List your studio projects
DEPLOYED AGENT
  logs       Show what the deployed agent has printed
  secret     Manage agent secrets
  workflow   Inspect and steer durable workflow runs
SELF-HOSTING
  start      Serve the built agent (production)
ACCOUNT
  login      Link your signed-in browser account and save your API key
TEMPLATES
  templates  List available project templates
With no command, \`aai\` in an agent directory (one with agent.ts) runs \`aai publish\`:
it pushes to the studio and deploys to PRODUCTION. At a terminal it asks first;
a non-interactive run publishes without asking. Elsewhere it runs \`aai init\`.
Use aai <command> --help for more information about a command."
`;

exports[`cli usage snapshots > aai build --help 1`] = `
"Bundle agent without deploying (build)
USAGE build [OPTIONS]
OPTIONS
             --json    Output JSON (auto-detected in non-TTY)
       --skip-tests    Skip running tests before build
   --skip-typecheck    Skip type checking before build
  --target=<target>    Deployment shape to emit (node, vercel, deno, modal; default: detected)"
`;

exports[`cli usage snapshots > aai delete --help 1`] = `
"Delete the studio project and its deployed agents (delete)
USAGE delete [OPTIONS]
OPTIONS
  -s, --server=<server>    Platform server URL
                 --json    Output JSON (auto-detected in non-TTY)"
`;

exports[`cli usage snapshots > aai deploy --help 1`] = `
"(internal) used by studio Publish (deploy)
USAGE deploy [OPTIONS]
OPTIONS
  -s, --server=<server>    Platform server URL
                 --json    Output JSON (auto-detected in non-TTY)
   --allow-preview-slug    Permit a \`-preview\`-suffixed slug (reserved for studio auto-previews; studio-internal — a slug you claim this way is subject to the preview reaper)
       --skip-typecheck    Skip type checking before deploy"
`;

exports[`cli usage snapshots > aai dev --help 1`] = `
"Start a local development server (dev)
USAGE dev [OPTIONS]
OPTIONS
      -p, --port=<port>    Port to listen on (Default: 3000)
                --watch    Restart on file changes (default at a terminal; AAI_DEV_WATCH=0 disables)
               --tunnel    Expose the server on a cloudflared quick tunnel; its URL becomes PUBLIC_URL
  --on-public-url=<cmd>    Shell command run with PUBLIC_URL set once the server is up, and with it empty on exit
                 --json    Output JSON (auto-detected in non-TTY)"
`;

exports[`cli usage snapshots > aai eval --help 1`] = `
"Run agent behaviour evals against a live model (eval)
USAGE eval [OPTIONS]
OPTIONS
  --json    Output JSON (auto-detected in non-TTY)"
`;

exports[`cli usage snapshots > aai init --help 1`] = `
"Scaffold a new agent project (init)
USAGE init [OPTIONS] [DIR]
ARGUMENTS
  DIR    Project directory
OPTIONS
                -f, --force    Overwrite existing files
  -t, --template=<template>    Template to use (prompted when omitted)
                  -y, --yes    Accept defaults (no prompts)
                     --json    Output JSON (auto-detected in non-TTY)"
`;

exports[`cli usage snapshots > aai secret --help 1`] = `
"Manage agent secrets (secret)
USAGE secret put|delete|list
COMMANDS
     put    Create or update a secret (value read from stdin, or prompted on a terminal)
  delete    Delete a secret
    list    List all secrets
Use secret <command> --help for more information about a command."
`;

exports[`cli usage snapshots > aai secret delete --help 1`] = `
"Delete a secret (delete)
USAGE delete [OPTIONS] <NAME>
ARGUMENTS
  NAME    Secret name (Required)
OPTIONS
                --local    Edit this project's .env instead of the platform's secrets (no login needed)
  -s, --server=<server>    Platform server URL
                 --json    Output JSON (auto-detected in non-TTY)"
`;

exports[`cli usage snapshots > aai secret list --help 1`] = `
"List all secrets (list)
USAGE list [OPTIONS]
OPTIONS
  -s, --server=<server>    Platform server URL
                 --json    Output JSON (auto-detected in non-TTY)"
`;

exports[`cli usage snapshots > aai secret put --help 1`] = `
"Create or update a secret (value read from stdin, or prompted on a terminal) (put)
USAGE put [OPTIONS] <NAME>
ARGUMENTS
  NAME    Secret name. The VALUE is not an argument — pipe it in (\`printf %s "$VALUE" | aai secret put NAME\`), or be prompted, masked, when stdin is a terminal (Required)
OPTIONS
                --local    Edit this project's .env instead of the platform's secrets (no login needed)
  -s, --server=<server>    Platform server URL
                 --json    Output JSON (auto-detected in non-TTY)"
`;

exports[`cli usage snapshots > aai test --help 1`] = `
"Run the project's tests (test)
USAGE test [OPTIONS]
OPTIONS
  --json    Output JSON (auto-detected in non-TTY)
  --only    Run agent.test.ts alone, not every spec in the project"
`;
